@@ -1,3 +1,7 @@
+2014-08-25	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
+
+	* src/changelogfiles.sh: script to automatically format git changes for a changelog
+
 2014-08-22	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
 
 	* src/fetchall.sh: script to update bare git repos (one-way)
